<resources>
    <string name="app_name">Friend Connection</string>
    <string name="title_activity_maps">Friend Connection</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="have_account">Have account?</string>
    <string name="register">register</string>
    <string name="password_again">Password again</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_an_account">create an account</string>
    <string name="name">Your Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="confirm">Confirm</string>
    <string name="personal_information">Personal information</string>
    <string name="qr_code">QR Code</string>
    <string name="ok">Ok</string>
    <string name="change_password">Change Password</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="friend_name">Friend Name</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="unfriend">Unfriend</string>
    <string name="information">Information</string>
    <string name="you_have_sure_unfriend">You have sure Unfriend</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_from_the_camera">Choose from the camera</string>
    <string name="choose_from_directories">Choose from directories</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="warning">WARNING</string>
    <string name="map_type_normal">Map Type Normal</string>
    <string name="map_type_hybrid">Map Type Hybrid</string>
    <string name="map_type_terrain">Map Type Terrain</string>
    <string name="map_type">Map Type</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="time">Time</string>
    <string name="calendar">Calendar</string>
    <string name="delete">Delete</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="peee">You need to provide permission to use the most effective application</string>
    <string name="schedule">Schedule</string>
    <string name="my_position">My Position</string>
    <string name="show_map">Show Map</string>
</resources>
