<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/clock_16"
            android:drawablePadding="8dp"
            android:text="@string/time"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/txtCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/calendar_16"
            android:drawablePadding="8dp"
            android:text="@string/calendar"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_text"
        android:text="@string/content"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="italic" />
</LinearLayout>