<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_warning"
            android:drawablePadding="16dp"
            android:text="@string/warning"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btnYesLogout"
                style="@style/PrimaryButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/yes"
                android:theme="@style/PrimaryButton" />

            <Button
                android:id="@+id/btnCancleLogout"
                style="@style/PrimaryButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/PrimaryButton" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>