<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/title"
                android:drawablePadding="12dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/map_flag"
                android:drawablePadding="12dp"
                android:fontFamily="@font/muli"
                android:text="@string/location"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/clock_16"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/time"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtCalendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/calendar_16"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/calendar"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:drawableLeft="@drawable/copy_content"
                android:drawablePadding="12dp"
                android:fontFamily="@font/muli"
                android:text="@string/content"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnShow"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/show_map"
                android:theme="@style/PrimaryButton" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>