<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bguser"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/personal_information"
                android:textSize="24sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvaInfor"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_overlay="true"
                app:civ_border_width="3dp"
                app:civ_circle_background_color="@color/colorWhite" />

            <TextView
                android:id="@+id/txtUserInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lnAllow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp"
                android:visibility="gone">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:checked="true"
                    android:theme="@style/MySwitch" />

                <TextView
                    android:id="@+id/txtAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Allow"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtNameInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:text="@string/name"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtSexInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_gender"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:text="@string/male"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtMailInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:text="@string/email"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtBirthInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:text="@string/birthday"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtPhoneInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:fontFamily="@font/roboto"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnQrInfor"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:elevation="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/qr_code"
                    android:textColor="@color/cardview_light_background"
                    android:theme="@style/PrimaryButton" />

                <Button
                    android:id="@+id/btnUpdateInfor"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:elevation="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/update"
                    android:textColor="@color/cardview_light_background"
                    android:theme="@style/PrimaryButton" />

                <Button
                    android:id="@+id/btnOkInfor"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:elevation="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ok"
                    android:textColor="@color/cardview_light_background"
                    android:theme="@style/PrimaryButton" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
