<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackSchedule"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:theme="@style/PrimaryButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="@string/add_schedule"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/title"
                        android:drawablePadding="12dp"
                        android:fontFamily="@font/font_text"
                        android:hint="@string/title"
                        android:textSize="17sp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/edtTime"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/clock_16"
                        android:drawablePadding="12dp"
                        android:focusable="false"
                        android:fontFamily="@font/font_text"
                        android:hint="@string/time"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/edtCalendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/calendar_16"
                        android:drawablePadding="12dp"
                        android:fontFamily="@font/font_text"
                        android:hint="@string/calendar"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="13sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/edtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/map_flag"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/font_text"
                    android:hint="@string/location"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="13sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/copy_content"
                        android:drawablePadding="12dp"
                        android:fontFamily="@font/font_value"
                        android:hint="@string/content" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/btnok"
                        style="@style/PrimaryButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ok"
                        android:theme="@style/PrimaryButton" />

                    <Button
                        android:id="@+id/btndelete"
                        style="@style/PrimaryButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:theme="@style/PrimaryButton" />

                    <Button
                        android:id="@+id/btncancle"
                        style="@style/PrimaryButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:theme="@style/PrimaryButton" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>